Enable user read/write permission on /dev/uinput; need ROOT